// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerImportStep should render with multiple import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="py-4 TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ftQhtr no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="text-base font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                          data-testid="TruncateEnd"
                        >
                          Custom N…
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Address__address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="py-4 TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ftQhtr no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="inline-flex overflow-hidden text-base font-semibold text-theme-text"
                        data-testid="Address__address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`LedgerImportStep should render with single import 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="inline-flex overflow-hidden text-base font-semibold text-theme-text"
              data-testid="Address__address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
        data-testid="Avatar"
      >
        <div
          class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
      >
        Wallet Name
        <span
          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="flex relative flex-1 h-full"
        >
          <input
            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            value=""
          />
        </div>
      </div>
    </fieldset>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Address
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
          >
            <span
              class="inline-flex overflow-hidden text-base font-semibold text-theme-text"
              data-testid="Address__address"
            >
              DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
        data-testid="Avatar"
      >
        <div
          class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
        >
          <img
            alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0 DARK
          </span>
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
      >
        Wallet Name
        <span
          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="flex relative flex-1 h-full"
        >
          <input
            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
            value=""
          />
        </div>
      </div>
    </fieldset>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name in the form 1`] = `
<div>
  <section
    class="space-y-6"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Your Ledger addresses have been imported.
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 bRHEGF no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2 w-40 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <div>
      <ul>
        <li>
          <div
            class="py-4 TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ftQhtr no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="text-base font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                          data-testid="TruncateEnd"
                        >
                          Custom N…
                        </span>
                      </span>
                      <span
                        class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Address__address"
                      >
                        DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
        <li>
          <div
            class="py-4 TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ftQhtr no-ligatures"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2 w-40 whitespace-nowrap"
            >
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                  <div>
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="inline-flex overflow-hidden text-base font-semibold text-theme-text"
                        data-testid="Address__address"
                      >
                        DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                      </span>
                    </div>
                    <p
                      class="mt-1 text-sm font-medium text-theme-secondary-500"
                    >
                      <span
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="LedgerImportStep__edit-alias"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    edit.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;
